# tobacco

./: .gitignore  CMakeLists.txt  README.md
desktop/Tobacco/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  Tobacco.csproj  app.manifest
desktop/Tobacco/Audio/: AdsrEnvelope.cs  Effects.cs  Filter.cs  Lfo.cs  Oscillators.cs  SynthEngine.cs
desktop/Tobacco/Codec/: AudioCodec.cs  AudioQuantTables.cs  Bitstream.cs  BluntDecoder.cs  BluntEncoder.cs  BluntTypes.cs  ColorSpace.cs  FfmpegMp4.cs  QuantTables.cs  WavIo.cs  WhtTransform.cs  Zigzag.cs
desktop/Tobacco/Styles/: App.axaml
desktop/Tobacco/Views/: ConverterView.axaml  ConverterView.axaml.cs  PlayerView.axaml  PlayerView.axaml.cs  SynthView.axaml  SynthView.axaml.cs
include/: blunt.h  blunt_audio.h  blunt_simd.h  blunt_tables.h
src/: blunt_audio.c  blunt_decoder.c  blunt_encoder.c  blunt_simd.c  blunt_tables.c
tests/: debug_1mb.c  debug_bar.c  debug_block.c  debug_color.c  debug_ident.c  debug_iframe.c  debug_large.c  debug_pf.c  debug_q16.c  debug_qfix.c  debug_quality.c  debug_test.c  test_audio_debug.c  test_audio_diag.c  test_audio_direct.c  test_audio_pipeline.c  test_audio_psnr.c  test_audio_roundtrip.c  test_audio_sizes.c  test_audio_stereo.c  test_audio_unit.c  test_bitstream_trace.c  test_bs_dump.c  test_ch1_trace.c  test_debug_nz.c  test_nz_count.c  test_roundtrip.c
tools/: blunt_decode.c  blunt_encode.c  blunt_info.c  blunt_wav.c
